scraper for all chainlink oracle feeds

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chainlink/test-helpers": "0.0.5",
     "@openzeppelin/contracts": "^3.2.0",
     "@openzeppelin/test-helpers": "^0.5.9",
+    "axios": "^0.22.0",
     "hardhat-deploy": "^0.7.0-beta.28"
   }
 }
