--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hardhat-project",
+  "name": "chaos-chainlink-poc",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
@@ -14,6 +14,7 @@
     "@openzeppelin/contracts": "^3.2.0",
     "@openzeppelin/test-helpers": "^0.5.9",
     "axios": "^0.22.0",
+    "cli-table": "^0.3.6",
     "hardhat-deploy": "^0.7.0-beta.28"
   }
 }
