--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.2.0",
     "ethers": "^5.0.19",
-    "hardhat": "^2.0.2"
+    "hardhat": "^2.6.5"
   },
   "dependencies": {
     "@chainlink/contracts": "0.0.11",
@@ -14,6 +14,7 @@
     "@openzeppelin/contracts": "^3.2.0",
     "@openzeppelin/test-helpers": "^0.5.9",
     "axios": "^0.22.0",
-    "hardhat-deploy": "^0.7.0-beta.28"
+    "hardhat-deploy": "^0.7.0-beta.28",
+    "solc": "^0.8.9"
   }
 }
