--- a/package.json
+++ b/package.json
@@ -13,9 +13,19 @@
     "@chainlink/test-helpers": "0.0.5",
     "@openzeppelin/contracts": "^3.2.0",
     "@openzeppelin/test-helpers": "^0.5.9",
+    "asciify-image": "^0.1.8",
     "axios": "^0.22.0",
+    "chalk": "^4.1.2",
+    "clear": "^0.1.0",
     "cli-table": "^0.3.6",
+    "clui": "^0.3.6",
+    "configstore": "^6.0.0",
     "env-cmd": "^10.1.0",
-    "hardhat-deploy": "^0.7.0-beta.28"
+    "figlet": "^1.5.2",
+    "hardhat-deploy": "^0.7.0-beta.28",
+    "inquirer": "^8.2.0",
+    "lodash": "^4.17.21",
+    "minimist": "^1.2.5",
+    "touch": "^3.1.0"
   }
 }
