--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@types/clear": "^0.1.2",
+    "@types/figlet": "^1.5.4",
+    "@types/ganache-core": "^2.7.0",
+    "@types/inquirer": "^8.1.3",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.2.0",
     "ethers": "^5.0.19",
-    "hardhat": "^2.6.5"
+    "hardhat": "^2.6.5",
+    "typescript": "^4.4.4"
   },
   "dependencies": {
     "@chainlink/contracts": "0.0.11",
     "@chainlink/test-helpers": "0.0.5",
     "@openzeppelin/contracts": "^3.2.0",
     "@openzeppelin/test-helpers": "^0.5.9",
+    "@types/cli-table": "^0.3.0",
     "asciify-image": "^0.1.8",
     "axios": "^0.22.0",
     "chalk": "^4.1.2",
@@ -22,6 +28,7 @@
     "configstore": "^6.0.0",
     "env-cmd": "^10.1.0",
     "figlet": "^1.5.2",
+    "ganache-core": "^2.13.2",
     "hardhat-deploy": "^0.7.0-beta.28",
     "inquirer": "^8.2.0",
     "lodash": "^4.17.21",
