--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@types/chai": "^4.2.22",
     "@types/clear": "^0.1.2",
     "@types/figlet": "^1.5.4",
     "@types/ganache-core": "^2.7.0",
     "@types/inquirer": "^8.1.3",
-    "chai": "^4.2.0",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.10.9",
+    "chai": "^4.3.4",
     "ethereum-waffle": "^3.2.0",
     "ethers": "^5.0.19",
     "hardhat": "^2.6.5",
+    "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   },
   "dependencies": {
