--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "chaos-chainlink-poc",
+  "name": "chaos-labs-configure-chainlink-oracles",
+  "scripts": {
+    "start": "ts-node --files index.ts"
+  },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@types/chai": "^4.2.22",
     "@types/clear": "^0.1.2",
     "@types/figlet": "^1.5.4",
-    "@types/ganache-core": "^2.7.0",
     "@types/inquirer": "^8.1.3",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.10.9",
