feat: adding jest boilerplate

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,10 @@
   "outDir": "dist",
   "baseUrl": ".",
   "strict": true,
+  "types": [
+    "node",
+    "jest"
+  ],
   "strictFunctionTypes": true,    
   "alwaysStrict": true,                                
   "paths": {
