--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "chaos-labs-configure-chainlink-oracles",
   "scripts": {
-    "start": "ts-node --files index.ts"
+    "start": "ts-node --files index.ts",
+    "test": "jest --verbose"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
@@ -25,6 +26,7 @@
     "@openzeppelin/contracts": "^3.2.0",
     "@openzeppelin/test-helpers": "^0.5.9",
     "@types/cli-table": "^0.3.0",
+    "@types/jest": "^27.0.2",
     "asciify-image": "^0.1.8",
     "axios": "^0.22.0",
     "chalk": "^4.1.2",
@@ -37,8 +39,10 @@
     "ganache-core": "^2.13.2",
     "hardhat-deploy": "^0.7.0-beta.28",
     "inquirer": "^8.2.0",
+    "jest": "^27.3.1",
     "lodash": "^4.17.21",
     "minimist": "^1.2.5",
-    "touch": "^3.1.0"
+    "touch": "^3.1.0",
+    "ts-jest": "^27.0.7"
   }
 }
