--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jest": "^27.3.1",
     "lodash": "^4.17.21",
     "minimist": "^1.2.5",
+    "mock-stdin": "^1.0.0",
     "touch": "^3.1.0",
     "ts-jest": "^27.0.7"
   }
